5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_825.log
== TEST (2019-04-02 17:45:48) 
-- CODE:
/* programa que calcula o perímetro e a área de uma
   circunferência de raio R (fornecido pelo usuário) */
-- ERROR:
File "XXXX", line 1
    /* programa que calcula o perímetro e a área de uma
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:12) 
-- CODE:
input(area)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(area)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:57:15) 
-- CODE:
fro, math import *
x=float(input("digite o numero do raio:"))
y=pi*x**2
z=4/3*x**3
print(round(y,3))
print(round(z,3))
-- EXECUTION TIME:
0.21789
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 1
    fro, math import *
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:57:36) 
-- CODE:
from math import *
x=float(input("digite o numero do raio:"))
y=pi*x**2
z=4/3*x**3
print(round(y,3))
print(round(z,3))
-- OUTPUT:
63.617
121.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:05) 
-- CODE:
from math import *
x=float(input("digite o numero do raio:"))
y=pi*x**2
z=4/3*x**3
print(round(y,3))
print(round(z,3))
-- EXECUTION TIME:
0.141819
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
121.5
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
2505.441
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:58:07) 
-- CODE:
from math import *
x=float(input("digite o numero do raio:"))
y=pi*x**2
z=4/3*x**3
print(round(y,3))
print(round(z,3))
-- OUTPUT:
63.617
121.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:58:16) 
-- CODE:
from math import *
x=float(input("digite o numero do raio:"))
y=pi*x**2
z=4/3*x**3
print(round(y,3))
print(round(z,3))
-- EXECUTION TIME:
0.223935
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
121.5
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
2505.441
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
